components/integration-suite-test-component-git-source-alix/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: integration-suite-test-application-laul
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: integration-suite-test-component-git-source-alix
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elintegration-suite-test-component-git-source-alix
  namespace: appstudio-e2e-test
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-integration-suite-test-component-git-source-alix
    weight: null
status: {}
